<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/radioGroupPadding"
        android:paddingTop="@dimen/radioGroupPadding">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Change grade:"
            android:layout_gravity="center" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toTopOf="parent" android:id="@+id/textView"/>


    <RadioGroup
            android:id="@+id/gradeChangeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:gravity="center"
            android:orientation="horizontal" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp">


        <RadioButton
                android:id="@+id/gradeChangeOneRadioBtn"
                android:layout_width="wrap_content"
                android:text="@string/_1"
                android:checked="true"
                android:layout_margin="@dimen/radioBtnMargin"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/gradeChangeTwoRadioBtn"
                android:layout_width="wrap_content"
                android:text="@string/_2"
                android:layout_margin="@dimen/radioBtnMargin"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/gradeChangeThreeRadioBtn"
                android:layout_width="wrap_content"
                android:text="@string/_3"
                android:layout_margin="@dimen/radioBtnMargin"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/gradeChangeFourRadioBtn"
                android:layout_width="wrap_content"
                android:text="@string/_4"
                android:layout_margin="@dimen/radioBtnMargin"
                android:layout_height="wrap_content"/>

        <RadioButton
                android:id="@+id/gradeChangeFiveRadioBtn"
                android:layout_width="wrap_content"
                android:text="@string/_5"
                android:layout_margin="@dimen/radioBtnMargin"
                android:layout_height="wrap_content"/>

    </RadioGroup>

    <Button android:id="@+id/saveGrade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_shape_round"
            android:backgroundTint="@color/colorPrimaryDark"
            android:text="@string/save"
            android:textColor="@color/white"
            android:layout_gravity="center"
            app:layout_constraintTop_toBottomOf="@+id/gradeChangeRadioGroup"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>